# usechange

./: AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  usecli.toml
.github/: contributing.md
.github/ISSUE_TEMPLATE/: bug_report.yml
scripts/: release.sh
src/usechange/: __init__.py  usecli.config.toml
src/usechange/changelog/: __init__.py  config.py  git.py  github.py  markdown.py  repo.py  semver.py
src/usechange/changelog/cli/: __init__.py  default.py  gh_release.py
src/usechange/cli/: __init__.py  usecli.config.toml
src/usechange/cli/commands/: __init__.py  changelog_command.py  gh_release_command.py  github_release_command.py  release_command.py
src/usechange/cli/commands/custom/: README.md  __init__.py
src/usechange/cli/commands/defaults/: __init__.py
src/usechange/cli/commands/defaults/base/: __init__.py  about_command.py  fzf_command.py  help_command.py  inspire_command.py
src/usechange/cli/commands/defaults/core/: __init__.py  utils.py
src/usechange/cli/commands/defaults/make/: __init__.py  make_command.py
src/usechange/cli/config/: __init__.py  colors.py
src/usechange/cli/core/: __init__.py  base_command.py
src/usechange/cli/core/error/: __init__.py  handler.py  utils.py
src/usechange/cli/core/exceptions/: __init__.py  base.py  config.py  usage.py  validation.py
src/usechange/cli/core/ui/: __init__.py  list.py  title.py
src/usechange/cli/core/validators/: __init__.py  network.py  numeric.py  path.py  string.py
src/usechange/cli/services/: __init__.py  command_service.py
src/usechange/cli/templates/: command.py.j2
src/usechange/cli/themes/: title.txt
src/usechange/cli/utils/: __init__.py
src/usechange/cli/utils/interactive/: __init__.py  terminal_menu.py
src/usechange/shared/: __init__.py
src/usechange/shared/config/: __init__.py  globals.py  manager.py
tests/: smoke_test.py  test_commit_parsing.py  test_emojis.py  test_git.py  test_markdown.py  test_semver.py
