[project]
name = "usechange"
version = "0.1.0"
description = "Generate Beautiful Changelogs using Conventional Commits"
readme = "README.md"
authors = [{ name = "Edward Boswell", email = "thememium@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "usecli>=0.1.30",
    "tomli>=2.0.1",
]

[dependency-groups]
dev = [
  "deptry>=0.24.0",
  "isort>=8.0.0",
  "poethepoet>=0.42.0",
  "pytest>=9.0.2",
  "ruff>=0.15.2",
  "ty>=0.0.18",
]

[tool.deptry]
known_first_party = ["usechange"]

[tool.poe.tasks]
dev = "uv run usechange"
clean-full = "sh -c 'uv run isort . && uv run ruff check . && uv run ruff format . && uv run deptry . && uv run ty check'"
clean = "sh -c 'uv run isort . && uv run ruff format .'"
test = "uv run pytest tests/ -v"
sort = "uv run isort ."
lint = "uv run ruff check ."
format = "uv run ruff format ."
deptry = "uv deptry ."
typecheck = "uv run ty check"
release = "bash scripts/release.sh"


[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.usecli]
title = "useChange"
title_file = "src/usechange/cli/themes/title.txt"
title_font = "ansi_shadow"
description = "Automated python change and release"
commands_dir = "src/usechange/cli/commands"
templates_dir = "src/usechange/cli/templates"
themes_dir = "src/usechange/cli/themes"
theme = "default"
hide_init = true
hide_inspire = true
hide_make_command = false
hide_make_theme = true

[project.scripts]
usechange = "usecli:main"
change = "usecli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
