[project]
name = "usechange"
version = "0.1.19"
description = "Generate Beautiful Changelogs using Conventional Commits"
readme = "README.md"
authors = [{ name = "Edward Boswell", email = "thememium@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
dependencies = ["tomli>=2.4.0", "usecli>=0.1.42"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/thememium/usechange"
Documentation = "https://github.com/thememium/usechange"
Repository = "https://github.com/thememium/usechange.git"
Issues = "https://github.com/thememium/usechange/issues"
Changelog = "https://github.com/thememium/usechange/blob/master/CHANGELOG.md"


[project.scripts]
usechange = "usecli:main"
change = "usecli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "deptry>=0.24.0",
  "isort>=8.0.0",
  "poethepoet>=0.42.0",
  "pytest>=9.0.2",
  "ruff>=0.15.2",
  "ty>=0.0.18",
]

[tool.deptry]
known_first_party = ["usechange"]

[tool.poe.tasks]
dev = "uv run usechange"
clean-full = "sh -c 'uv run isort . && uv run ruff check . --fix && uv run ruff format . && uv run deptry . && uv run ty check'"
clean = "sh -c 'uv run isort . && uv run ruff format .'"
test = "uv run pytest tests/ -v"
sort = "uv run isort ."
lint = "uv run ruff check ."
format = "uv run ruff format ."
deptry = "uv deptry ."
typecheck = "uv run ty check"
build = "uv build --no-sources"
release = "uv run usechange release"

[tool.ty]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv"]

[tool.ty.rules]
# Ty uses rule = "level" format (error, warn, ignore)
# See all rules at: https://docs.astral.sh/ty/reference/rules/

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
